<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_new" />

        <Button
            android:id="@+id/button_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_friends" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_settings"
            android:onClick="button_settings" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_about"
            android:onClick="button_about" />

</LinearLayout>