<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name_text" />

    <EditText
        android:id="@+id/login_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/login_pass_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_pass_text" />

    <EditText
        android:id="@+id/login_pass_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_loginbtn_text"
        android:onClick="button_login" />

    <TextView
        android:id="@+id/login_signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signup_text" />

    <Button
        android:id="@+id/login_button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signupbtn_text"
        android:onClick="button_signup" />

</LinearLayout>